# TEMA-3-2025.2

./: .gitignore  README.md  pyproject.toml  trab3_CROHME.ipynb
